# ghost-code

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh  test.sh  test_hook.sh
src/: config.rs  main.rs  plan_usage.rs  setup.rs  telegram.rs  usage.rs
src/bot/: callbacks.rs  commands.rs  messages.rs  mod.rs  polling.rs  status.rs  streaming.rs
src/hook/: format.rs  mod.rs  process.rs  session.rs  terminal.rs
